# gsoc-2022-arduino-core

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yml
api/: ArduinoAPI.h  HardwareSPI.h  IPAddress.cpp  IPAddress.h  PluggableUSB.h  Print.h  RingBuffer.h  Stream.cpp  Stream.h  String.cpp  String.h  USBAPI.h  Udp.h  WCharacter.h
cores/arduino/: Arduino.h  zephyrCommon.cpp
libraries/SPI/: SPI.cpp
samples/analog_input/: CMakeLists.txt
samples/attach_interrupt/: CMakeLists.txt
samples/fade/: CMakeLists.txt
samples/i2cdemo/: CMakeLists.txt
samples/serial_event/: CMakeLists.txt
samples/threads_arduino/: CMakeLists.txt
test/: CMakeLists.txt
test/include/: MillisFake.h  PrintMock.h  StreamMock.h  millis.h
test/src/: MillisFake.cpp  itoa.cpp  millis.cpp
test/src/IPAddress/: test_IPAddress6.cpp  test_fromString.cpp  test_fromString6.cpp  test_operator_assignment.cpp  test_operator_comparison.cpp  test_operator_comparison6.cpp  test_operator_parentheses.cpp  test_operator_parentheses6.cpp  test_printTo6.cpp
test/src/Print/: test_print.cpp  test_println.cpp
test/src/Ringbuffer/: test_available.cpp  test_isFull.cpp
test/src/Stream/: test_parseFloat.cpp  test_parseInt.cpp  test_readBytes.cpp  test_readString.cpp
test/src/String/: test_String.cpp  test_characterAccessFunc.cpp  test_compareTo.cpp  test_comparisonFunc.cpp  test_concat.cpp  test_move.cpp  test_operators.cpp  test_remove.cpp  test_replace.cpp  test_substring.cpp  test_toDouble.cpp  test_toInt.cpp  test_toLowerCase.cpp  test_toUpperCase.cpp  test_trim.cpp
test/src/WCharacter/: test_isAscii.cpp  test_toAscii.cpp
variants/arduino_uno_r4_minima/: arduino_uno_r4_minima.overlay  variants.h
